--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nuxt/fonts": "^0.10.3",
     "@nuxt/icon": "^1.10.3",
     "@nuxt/image": "^1.9.0",
+    "@supabase/supabase-js": "^2.49.4",
     "@tailwindcss/vite": "^4.0.8",
     "@unovis/ts": "^1.5.1",
     "@unovis/vue": "^1.5.1",
