--- a/package.json
+++ b/package.json
@@ -15,20 +15,22 @@
     "@nuxt/fonts": "^0.10.3",
     "@nuxt/icon": "^1.10.3",
     "@nuxt/image": "^1.9.0",
-    "@supabase/supabase-js": "^2.49.4",
     "@tailwindcss/vite": "^4.0.8",
     "@unovis/ts": "^1.5.1",
     "@unovis/vue": "^1.5.1",
+    "aos": "^2.3.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "nuxt": "^3.15.4",
     "reka-ui": "^2.0.0",
+    "swiper": "^11.2.6",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.8",
     "vue": "latest",
     "vue-router": "latest"
   },
   "devDependencies": {
+    "@types/aos": "^3.0.7",
     "prettier": "^3.5.2"
   }
 }
