--- a/package.json
+++ b/package.json
@@ -8,30 +8,24 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "format:check": "prettier --check .",
     "format:write": "prettier --write ."
   },
   "dependencies": {
-    "@nuxt/fonts": "^0.10.3",
-    "@nuxt/icon": "^1.10.3",
-    "@nuxt/image": "^1.9.0",
-    "@supabase/supabase-js": "^2.49.4",
-    "@tailwindcss/vite": "^4.0.8",
-    "@unovis/ts": "^1.5.1",
-    "@unovis/vue": "^1.5.1",
-    "aos": "^2.3.4",
-    "class-variance-authority": "^0.7.1",
+    "@nuxt/fonts": "0.11.4",
+    "@nuxt/icon": "1.13.0",
+    "@nuxt/image": "1.10.0",
+    "@supabase/supabase-js": "^2.49.6",
+    "@tailwindcss/vite": "^4.1.7",
     "clsx": "^2.1.1",
-    "nuxt": "^3.15.4",
-    "reka-ui": "^2.0.0",
-    "swiper": "^11.2.6",
-    "tailwind-merge": "^3.0.2",
-    "tailwindcss": "^4.0.8",
-    "vue": "latest",
-    "vue-router": "latest"
+    "motion-v": "1.1.0-alpha.1",
+    "nuxt": "^3.17.3",
+    "reka-ui": "^2.2.1",
+    "tailwind-merge": "^3.3.0",
+    "tailwindcss": "^4.1.7",
+    "vue": "^3.5.13",
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
-    "@types/aos": "^3.0.7",
-    "prettier": "^3.5.2"
+    "prettier": "^3.5.3"
   }
 }
